refactoring httpGet, httpPost